--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,12 @@ node_modules/tiny-emitter/test/index.js
 node_modules/to-regex-range/index.js
 node_modules/to-regex-range/LICENSE
 node_modules/to-regex-range/README.md
+.cache/31/6e04b8f080e9da9dd63fa9609ddd0c.json
+.cache/5f/1f6d6c9407d611bea8d61280479db3.json
+.cache/69/45abcb90431d83230baa0acbc8f596.json
+.cache/6e/b3c74dcf2e272fe1f19804df606b71.json
+.cache/70/995033e61746fe1e971c360ea2fbaf.json
+.cache/b0/1e6bce433e57c0015148928901be68.json
+.cache/dd/4d7fe585ae27aa9d057d89b5883f01.json
+dist/about.c92dd610.svg
+dist/about.html
